updating & deleting Article * ui improvements

--- a/.jshintrc
+++ b/.jshintrc
@@ -54,7 +54,7 @@
     "devel": true,
     "dojo": false,
     "jasmine": false,
-    "jquery": false,
+    "jquery": true,
     "mocha": true,
     "mootools": false,
     "node": false,
