--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/prashant-kr-314/NodeJs-login-registration#readme",
   "dependencies": {
     "@types/jquery": "^3.3.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "ejs": "^2.6.1",
@@ -27,6 +28,8 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "mongoose": "^5.2.10",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
